引入新的日历插件

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     })(document, window);
 
   </script>
+  <style>
+    .noscroll,
+    .noscroll body {
+      overflow: hidden;
+    }
+    .noscroll body {
+      position: relative;
+    }
+  </style>
 </head>
 
 <body>
@@ -37,5 +46,8 @@
 
   </script>
 </body>
+
+
+
 
 </html>
