--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>project</title>
+  <!-- <title>project</title> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <!-- <script src="./static/common/download.js"></script> -->
+
   <script>
     (function (doc, win) {
 
@@ -32,9 +33,11 @@
     .noscroll body {
       overflow: hidden;
     }
+
     .noscroll body {
       position: relative;
     }
+
   </style>
 </head>
 
