修改样式，和我的课程

--- a/index.html
+++ b/index.html
@@ -7,24 +7,29 @@
   <!-- <title>project</title> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <script>
-    (function (doc, win) {
+    // (function (doc, win) {
 
-      var docEl = doc.documentElement, //获取html标签
-        //orientationchange方向改变事件
-        resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-        recalc = function () {
-          //当前设备视口宽度
-          var clientWidth = docEl.clientWidth;
-          if (!clientWidth) return;
-          docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
-        };
+    //   var docEl = doc.documentElement, //获取html标签
+    //     //orientationchange方向改变事件
+    //     resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+    //     recalc = function () {
+    //       //当前设备视口宽度
+    //       var clientWidth = docEl.clientWidth;
+    //       if (!clientWidth) return;
+    //       docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
+    //     };
 
-      if (!doc.addEventListener) return;
-      win.addEventListener(resizeEvt, recalc, false);
-      doc.addEventListener('DOMContentLoaded', recalc, false);
+    //   if (!doc.addEventListener) return;
+    //   win.addEventListener(resizeEvt, recalc, false);
+    //   doc.addEventListener('DOMContentLoaded', recalc, false);
 
-    })(document, window);
+    // })(document, window);
+    let htmlWidth = document.documentElement.clientWidth || document.body.clientWidth;
+    console.log(htmlWidth)
 
+
+    let htmlDom = document.getElementsByTagName('html')[0];
+    htmlDom.style.fontSize = htmlWidth / 10 + 'px';
   </script>
   <style>
     .noscroll,
