更新后提交06252

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
     let htmlDom = document.getElementsByTagName('html')[0];
     htmlDom.style.fontSize = htmlWidth / 10 + 'px';
+
   </script>
+  <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
   <style>
     .noscroll,
     .noscroll body {
@@ -41,7 +43,11 @@
     .noscroll body {
       position: relative;
     }
-    body {-webkit-overflow-scrolling: touch;}
+
+    body {
+      -webkit-overflow-scrolling: touch;
+    }
+
   </style>
 </head>
 
